update docker image name

--- a/training.ipynb
+++ b/training.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_img = f'{accountId}.dkr.ecr.ap-northeast-2.amazonaws.com/yolov8-cpu:latest'"
+    "training_img = f'{accountId}.dkr.ecr.ap-northeast-2.amazonaws.com/yolov8-training-gpu:latest'"
    ]
   },
   {
