add revision cmd

--- a/notebook/pikachu_sagemaker.ipynb
+++ b/notebook/pikachu_sagemaker.ipynb
@@ -93,6 +93,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cfbbb08c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git rev-parse --short=10 HEAD "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 148,
    "id": "3895e901-4af3-4e70-8633-70099f9ed6c1",
    "metadata": {
