--- a/notebook/pikachu_sagemaker.ipynb
+++ b/notebook/pikachu_sagemaker.ipynb
@@ -111,7 +111,8 @@
    "outputs": [],
    "source": [
     "tag = '' # RUN git rev-parse --short=10 HEAD \n",
-    "training_image_uri = f'395271362395.dkr.ecr.ap-northeast-2.amazonaws.com/yolov8-training-gpu:{tag}'\n",
+    "#training_image_uri = f'395271362395.dkr.ecr.ap-northeast-2.amazonaws.com/yolov8-training-gpu:{tag}'\n",
+    "training_image_uri = f'haandol/yolov8-training-gpu'\n",
     "model_path = f\"s3://{default_bucket}/PikachuTrain\""
    ]
   },
