add inference types

--- a/notebook/pikachu_sagemaker.ipynb
+++ b/notebook/pikachu_sagemaker.ipynb
@@ -2033,13 +2033,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
+   "cell_type": "markdown",
    "id": "78fa1996-fb21-43f8-ad0f-5b461ca69ce1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "proceccing_instance_count = 1\n",
     "training_instance_count = 1\n",
@@ -2312,7 +2310,7 @@
     "register_args = model.register(\n",
     "    content_types=['image/jpeg'],\n",
     "    response_types=['application/json'],\n",
-    "    inference_instances=['ml.m5.xlarge'],\n",
+    "    inference_instances=['ml.m5.large', 'ml.m5.xlarge'],\n",
     "    model_package_group_name=model_package_group_name,\n",
     "    approval_status=model_approval_status,\n",
     "    model_metrics=model_metrics,\n",
